--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "marked-webpack-plugin",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "A webpack5 plugin for markdown to html",
     "main": "dist/index.js",
     "author": "kaze-k <kerkaze@outlook.com> (https://github.com/kaze-k)",
@@ -11,8 +11,7 @@
         "eslint:check": "eslint src",
         "eslint:fix": "eslint --fix src",
         "prettier:check": "prettier --check src",
-        "prettier:format": "prettier --write src",
-        "test": "webpack --config ./test/webpack.config.babel.js --mode production"
+        "prettier:format": "prettier --write src"
     },
     "files": [
         "dist/"
@@ -40,22 +39,16 @@
         "marked": "^9.1.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.23.2",
-        "@babel/preset-env": "^7.23.2",
-        "@babel/register": "^7.22.15",
         "@types/ejs": "^3.1.4",
         "@types/node": "^20.8.7",
         "@types/webpack": "^5.28.4",
         "@typescript-eslint/eslint-plugin": "^6.8.0",
         "@typescript-eslint/parser": "^6.8.0",
-        "@webpack-cli/generators": "^3.0.7",
         "eslint": "^8.51.0",
         "eslint-config-prettier": "^9.0.0",
         "log-symbols": "^5.1.0",
         "ora": "^7.0.1",
         "prettier": "^3.0.3",
-        "typescript": "^5.2.2",
-        "webpack": "^5.89.0",
-        "webpack-cli": "^5.1.4"
+        "typescript": "^5.2.2"
     }
 }
